Testing MySQL & PosgtreSQL connections: successful

--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,12 @@
 [postgresql]
+; basic postgre server, db
 host=localhost
-database=master
+database=postgres
 user=postgres
 password=12345
+port=5432
+;
+; my basic mySQL server, db
+; host="localhost", 
+; user="root",
+; password="1234"
