--- a/database.ini
+++ b/database.ini
@@ -1,10 +1,16 @@
 [postgresql]
-; basic postgre server, db
 host=localhost
-database=postgres
+database=practice
 user=postgres
 password=12345
 port=5432
+
+; basic postgre server, db
+; host=localhost
+; database=postgres
+; user=postgres
+; password=12345
+; port=5432
 ;
 ; my basic mySQL server, db
 ; host="localhost", 
